--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for hello-fly-aezell-12120116pm on 2025-12-12T21:23:10Z
+# fly.toml app configuration file generated for hello-fly-12160208pm on 2025-12-16T20:28:15Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'hello-fly-aezell-12120116pm'
+app = 'hello-fly-12160208pm'
 primary_region = 'iad'
 
 [build]
